--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "mongodb"
   ],
   "dependencies": {
-    "mongoose": "~3.6.11",
-    "node-gcm": "~0.13.0",
-    "lodash": "~1.3.1",
-    "apn": "~1.7.5",
+    "apn": "^2.1.5",
     "express": "~3.2.6",
-    "commander": "2.7.1"
+    "lodash": "~1.3.1",
+    "mongoose": "^4.11.10",
+    "node-gcm": "^0.14.6"
   },
   "bin": {
     "pushserver": "./bin/pushserver.js"
   },
   "main": "./lib/PushController.js",
   "scripts": {
-"start": "node ./bin/pushserver.js",
+    "start": "node ./bin/pushserver.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
