--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "apn": "^2.1.5",
+    "fcm": "^1.0.3",
     "lodash": "~1.3.1",
     "mongoose": "^4.11.10",
     "node-gcm": "^0.14.6"
